--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 .logo {
     max-width: 100%;
     height: auto;
-    padding: 15px;
+    padding: 50px;
+}
+
+.section-sobre {
+    padding-bottom: 50px;
 }
